add latest perl

--- a/PiSpider/PiSpider/config.yml
+++ b/PiSpider/PiSpider/config.yml
@@ -1,27 +1,37 @@
 dmhy_rss_spider:
   name:
     - 女神異聞錄5
-    - 齐木楠雄的灾难
-    - 魔卡少女樱透明卡篇
-    - 全金属狂潮4
-    - 七大罪戒律的复活
-    - 奴隶区
-    - 銀河英雄傳說
     - 海贼王
-    - 黃金神威
     - 黑色五叶草
-    - MEGALO_BOX
     - SteinsGate0
+    - 我的英雄学院3
+    - 工作细胞
+    - 银魂
+    - 进击的巨人3
+    - 妖怪旅馆营业中
+    - 百炼霸王与圣约女武神
+    - overload3
+    - 摇曳庄幽奈小姐
+    - 碧蓝之海
+    - 七星团
+    - 后街女孩
+    - 杀戮天使
+    - 异世界魔王与召唤少女魔术
   re:
     - .+極影字幕社.+女神異聞錄5.+\d{1,}.+BIG5.+720P.+MP4
-    - .+豌豆字幕组.+风之圣殿字幕组.+齐木楠雄的灾难.+第二季.+\d{1,}.+简体.+720P.+MP4
-    - .+(?=.*豌豆字幕組&風之聖殿字幕組)(?=.*魔卡少女櫻)(?=.*繁體)(?=.*720P)(?=.*MP4)
-    - .+雪飘工作室.+全金属狂潮.+\d{1,}.+720p.+简体内嵌
-    - .+(?=.*豌豆字幕组)(?=.*七大罪)(?=.*BIG5繁體)(?=.*720P)
-    - .+(?=.*西農YUI漢化組)(?=.*奴隸區The)(?=.*BIG5繁體)(?=.*720P)
-    - .+漫遊字幕組&澄空學園&天香字幕社.+銀河英雄傳說.+Die.+Neue.+These.+\d{1,}.+繁體內嵌.+720P.+MP4
-    - .+(?=.*OPFans枫雪动漫)(?=.*海贼王)(?=.*720P)(?=.*周日版)
-    - .+(?=.*幻櫻字幕組)(?=.*黃金神威)(?=.*BIG5_MP4)(?=.*1280X720)
+    - .+(?=.Skytree)(?=.*海贼王)(?=.*X264)(?=.*720P)(?=.*GB_JP)(?=.*MP4)
     - .+(?=.*DMHY)(?=.*黑色五葉草)(?=.*繁體)(?=.*720P)(?=.*MP4)
-    - .+(?=.*四月新番)(?=.*MEGALO BOX)(?=.*GB_MP4)(?=.*1920×1080)
     - .+(?=.*澄空學園&雪飄工作室&華盟字幕社)(?=.*Steins;Gate 0)(?=.*720p)(?=.*繁體內嵌)
+    - .+(?=.*八重櫻字幕組)(?=.*我的英雄學院S3)(?=.*繁体)(?=.*720P)
+    - .+(?=.*喵萌奶茶屋)(?=.*工作細胞)(?=.*720p)(?=.*繁體)
+    - .+(?=.*LAC字幕組)(?=.*銀魂)(?=.*720P_繁中)
+    - .+(?=.*極影字幕社)(?=.*進擊的巨人 3)(?=.*BIG5)(?=.*MP4_720P)
+    - .+(?=.*搬运)(?=.*妖怪旅馆营业中)(?=.*1080p)(?=.*中文&日文字幕)
+    - .+(?=.*澄空&雪飄)(?=.*百煉霸王與聖約女武神)(?=.*720p)(?=.*繁體內嵌)
+    - .+(?=.*八重櫻字幕組)(?=.*Overlord III)(?=.*720p)(?=.*繁體)
+    - .+(?=.*動漫國字幕組)(?=.*搖曳莊的幽奈小姐)(?=.*720p)(?=.*繁體)
+    - .+(?=.*悠哈璃羽字幕社＆西農YUI漢化組)(?=.*Grand Blue)(?=.*x264 720p)(?=.*CHT)
+    - .+(?=.*波洛咖啡廳Reunion攻略組)(?=.*七星之昴星團)(?=.*繁日雙語字幕)(?=.*1080P)
+    - .+(?=.*極影字幕社)(?=.*後街女孩)(?=.*BIG5)(?=.*720P)
+    - .+(?=.*極影字幕社)(?=.*殺戮的天使)(?=.*BIG5)(?=.*MP4_720)
+    - .+(?=.*c.c动漫)(?=.*异世界魔王与召唤少女的奴隶魔术)(?=.*GB)(?=.*1080P)           
