use rpc lib instead of cmd

--- a/PiSpider/PiSpider/config.yml
+++ b/PiSpider/PiSpider/config.yml
@@ -1,6 +1,6 @@
 dmhy_rss_spider:
   name:
-    - 女神異聞錄5
+    - 女神异闻录5
     - 海贼王
     - 黑色五叶草
     - SteinsGate0
@@ -34,4 +34,4 @@ dmhy_rss_spider:
     - .+(?=.*波洛咖啡廳Reunion攻略組)(?=.*七星之昴星團)(?=.*繁日雙語字幕)(?=.*1080P)
     - .+(?=.*極影字幕社)(?=.*後街女孩)(?=.*BIG5)(?=.*720P)
     - .+(?=.*極影字幕社)(?=.*殺戮的天使)(?=.*BIG5)(?=.*MP4_720)
-    - .+(?=.*c.c动漫)(?=.*异世界魔王与召唤少女的奴隶魔术)(?=.*GB)(?=.*1080P)           
+    - .+(?=.*c.c动漫)(?=.*异世界魔王与召唤少女的奴隶魔术)(?=.*GB)(?=.*1080P)
