--- a/PiSpider/PiSpider/config.yml
+++ b/PiSpider/PiSpider/config.yml
@@ -1,37 +1,37 @@
 dmhy_rss_spider:
   name:
-    - 女神异闻录5
+    - 关于我转生后成为史莱姆的那件事
     - 海贼王
     - 黑色五叶草
-    - SteinsGate0
-    - 我的英雄学院3
-    - 工作细胞
-    - 银魂
+    - 五等分的花嫁
+    - 约定的梦幻岛
+    - 多罗罗
+    - 魔偶马戏团
     - 进击的巨人3
-    - 妖怪旅馆营业中
-    - 百炼霸王与圣约女武神
-    - overload3
-    - 摇曳庄幽奈小姐
-    - 碧蓝之海
-    - 七星团
-    - 后街女孩
-    - 杀戮天使
-    - 异世界魔王与召唤少女魔术
+    - 灵能百分百S2
+    - 狂賭之淵xx
+    - 辉夜大小姐想让我告白
+    - 家有女友
+    - 不愉快的怪物庵
+    - 不吉波普不笑
+    - 约会大作战3
+    - 盾之勇者成名录
+    - Endro
   re:
-    - .+極影字幕社.+女神異聞錄5.+\d{1,}.+BIG5.+720P.+MP4
-    - .+(?=.Skytree)(?=.*海贼王)(?=.*X264)(?=.*720P)(?=.*GB_JP)(?=.*MP4)
+    - .+(?=.動漫國字幕組)(?=.*關於我轉生後成為史萊姆的那件事)(?=.*720P)(?=.*繁體)(?=.*MP4)
+    - .+(?=.OPFans楓雪動漫)(?=.*ONE PIECE 海賊王)(?=.*1280X720)(?=.*周日版)(?=.*MP4)
     - .+(?=.*DMHY)(?=.*黑色五葉草)(?=.*繁體)(?=.*720P)(?=.*MP4)
-    - .+(?=.*澄空學園&雪飄工作室&華盟字幕社)(?=.*Steins;Gate 0)(?=.*720p)(?=.*繁體內嵌)
-    - .+(?=.*八重櫻字幕組)(?=.*我的英雄學院S3)(?=.*繁体)(?=.*720P)
-    - .+(?=.*喵萌奶茶屋)(?=.*工作細胞)(?=.*720p)(?=.*繁體)
-    - .+(?=.*LAC字幕組)(?=.*銀魂)(?=.*720P_繁中)
+    - .+(?=.*咕咕茶字幕組)(?=.*五等分的花嫁)(?=.*1080P)(?=.*繁體)
+    - .+(?=.*豌豆字幕組&風之聖殿字幕組)(?=.*約定的夢幻島)(?=.*繁体)(?=.*720P)
+    - .+(?=.*喵萌奶茶屋)(?=.*多羅羅)(?=.*720p)(?=.*繁體)
+    - .+(?=.*雪飄工作室)(?=.*魔偶馬戲團)(?=.*720p)(?=.*繁體內嵌)
     - .+(?=.*極影字幕社)(?=.*進擊的巨人 3)(?=.*BIG5)(?=.*MP4_720P)
-    - .+(?=.*搬运)(?=.*妖怪旅馆营业中)(?=.*1080p)(?=.*中文&日文字幕)
-    - .+(?=.*澄空&雪飄)(?=.*百煉霸王與聖約女武神)(?=.*720p)(?=.*繁體內嵌)
-    - .+(?=.*八重櫻字幕組)(?=.*Overlord III)(?=.*720p)(?=.*繁體)
-    - .+(?=.*動漫國字幕組)(?=.*搖曳莊的幽奈小姐)(?=.*720p)(?=.*繁體)
-    - .+(?=.*悠哈璃羽字幕社＆西農YUI漢化組)(?=.*Grand Blue)(?=.*x264 720p)(?=.*CHT)
-    - .+(?=.*波洛咖啡廳Reunion攻略組)(?=.*七星之昴星團)(?=.*繁日雙語字幕)(?=.*1080P)
-    - .+(?=.*極影字幕社)(?=.*後街女孩)(?=.*BIG5)(?=.*720P)
-    - .+(?=.*極影字幕社)(?=.*殺戮的天使)(?=.*BIG5)(?=.*MP4_720)
-    - .+(?=.*c.c动漫)(?=.*异世界魔王与召唤少女的奴隶魔术)(?=.*GB)(?=.*1080P)
+    - .+(?=.*喵萌奶茶屋)(?=.*靈能百分百II/Mob Psycho 100 S2)(?=.*1080p)(?=.*繁體)
+    - .+(?=.*喵萌茶會字幕組)(?=.*狂賭之淵××)(?=.*1080p)(?=.*繁體)
+    - .+(?=.*澄空学园)(?=.*辉夜大小姐想让我告白)(?=.*MP4)(?=.*720p)
+    - .+(?=.*桜都字幕組)(?=.*家有女友)(?=.*繁體)(?=.*1080P)
+    - .+(?=.*動漫國字幕組)(?=.*不愉快的妖怪庵 續)(?=.*720P)(?=.*繁體)
+    - .+(?=.*幻櫻字幕組)(?=.*不吉波普不笑 Boogiepop wa Warawanai)(?=.*BIG5_MP4)(?=.*1280X720)
+    - .+(?=.*DHR動研字幕組)(?=.*約會大作戰 第三季_DATE A LIVE III)(?=.*繁體)(?=.*720P)
+    - .+(?=.*爱恋字幕社)(?=.*盾之勇者成名录)(?=.*720P)(?=.*BIG5)
+    - .+(?=.*動漫國字幕組)(?=.*勇者企劃 / Endro～！)(?=.*1080P)(?=.*繁體)
