--- a/PiSpider/PiSpider/config.yml
+++ b/PiSpider/PiSpider/config.yml
@@ -9,7 +9,7 @@ dmhy_rss_spider:
     - 魔偶马戏团
     - 进击的巨人3
     - 灵能百分百S2
-    - 狂賭之淵xx
+    - 狂赌之渊xx
     - 辉夜大小姐想让我告白
     - 家有女友
     - 不愉快的怪物庵
@@ -18,20 +18,20 @@ dmhy_rss_spider:
     - 盾之勇者成名录
     - Endro
   re:
-    - .+(?=.動漫國字幕組)(?=.*關於我轉生後成為史萊姆的那件事)(?=.*720P)(?=.*繁體)(?=.*MP4)
-    - .+(?=.OPFans楓雪動漫)(?=.*ONE PIECE 海賊王)(?=.*1280X720)(?=.*周日版)(?=.*MP4)
+    - .+(?=.c.c动漫)(?=.*关于我转生后成为史莱姆的那件事)(?=.*简日)(?=.*HEVC)(?=.*1080P)
+    - .+(?=.Skytree)(?=.*ONE PIECE 海贼王)(?=.*X264)(?=.*720P)(?=.*GB_JP)(?=.*MP4)(?=.*CRRIP)(?=.*中日双语字幕)
     - .+(?=.*DMHY)(?=.*黑色五葉草)(?=.*繁體)(?=.*720P)(?=.*MP4)
     - .+(?=.*咕咕茶字幕組)(?=.*五等分的花嫁)(?=.*1080P)(?=.*繁體)
-    - .+(?=.*豌豆字幕組&風之聖殿字幕組)(?=.*約定的夢幻島)(?=.*繁体)(?=.*720P)
+    - .+(?=.*豌豆字幕組&風之聖殿字幕組)(?=.*約定的夢幻島 / The_Promised_Neverland)(?=.*繁體)(?=.*720P)
     - .+(?=.*喵萌奶茶屋)(?=.*多羅羅)(?=.*720p)(?=.*繁體)
     - .+(?=.*雪飄工作室)(?=.*魔偶馬戲團)(?=.*720p)(?=.*繁體內嵌)
     - .+(?=.*極影字幕社)(?=.*進擊的巨人 3)(?=.*BIG5)(?=.*MP4_720P)
     - .+(?=.*喵萌奶茶屋)(?=.*靈能百分百II/Mob Psycho 100 S2)(?=.*1080p)(?=.*繁體)
-    - .+(?=.*喵萌茶會字幕組)(?=.*狂賭之淵××)(?=.*1080p)(?=.*繁體)
+    - .+(?=.*悠哈璃羽字幕社)(?=.*狂賭之淵××_Kakegurui ××)(?=.*繁日雙語)(?=.*x264 1080p)
     - .+(?=.*澄空学园)(?=.*辉夜大小姐想让我告白)(?=.*MP4)(?=.*720p)
     - .+(?=.*桜都字幕組)(?=.*家有女友)(?=.*繁體)(?=.*1080P)
     - .+(?=.*動漫國字幕組)(?=.*不愉快的妖怪庵 續)(?=.*720P)(?=.*繁體)
     - .+(?=.*幻櫻字幕組)(?=.*不吉波普不笑 Boogiepop wa Warawanai)(?=.*BIG5_MP4)(?=.*1280X720)
     - .+(?=.*DHR動研字幕組)(?=.*約會大作戰 第三季_DATE A LIVE III)(?=.*繁體)(?=.*720P)
-    - .+(?=.*爱恋字幕社)(?=.*盾之勇者成名录)(?=.*720P)(?=.*BIG5)
+    - .+(?=.*轻之国度字幕组)(?=.*盾之勇者成名录)(?=.*720P)(?=.*MP4)
     - .+(?=.*動漫國字幕組)(?=.*勇者企劃 / Endro～！)(?=.*1080P)(?=.*繁體)
