update new spider

--- a/PiSpider/PiSpider/config.yml
+++ b/PiSpider/PiSpider/config.yml
@@ -2,19 +2,8 @@ dmhy_rss_spider:
   name:
     - 海贼王
     - 黑色五叶草
-    - 多罗罗
-    - 魔偶马戏团
-    - 进击的巨人3
-    - 不吉波普不笑
-    - 盾之勇者成名录
-    - JOJO黄金之风
   re:
-    - .+(?=.Skytree)(?=.*ONE PIECE 海贼王)(?=.*X264)(?=.*720P)(?=.*GB_JP)(?=.*MP4)(?=.*CRRIP)(?=.*中日双语字幕)
+    - .+(?=.Skytree)(?=.*ONE PIECE 海贼王)(?=.*720P)(?=.*GB_JP)(?=.*MP4)(?=.*CRRIP)
     - .+(?=.*DMHY)(?=.*黑色五葉草)(?=.*繁體)(?=.*720P)(?=.*MP4)
-    - .+(?=.*喵萌奶茶屋)(?=.*多羅羅)(?=.*720p)(?=.*繁體)
-    - .+(?=.*雪飄工作室)(?=.*魔偶馬戲團)(?=.*720p)(?=.*繁體內嵌)
-    - .+(?=.*極影字幕社)(?=.*進擊的巨人 3)(?=.*BIG5)(?=.*MP4_720P)
-    - .+(?=.*幻櫻字幕組)(?=.*不吉波普不笑 Boogiepop wa Warawanai)(?=.*BIG5_MP4)(?=.*1280X720)
-    - .+(?=.*轻之国度字幕组)(?=.*盾之勇者成名录)(?=.*720P)(?=.*MP4)
-    - .+(?=.*搬运)(?=.*JOJO的奇妙冒险 黄金之风)(?=.*1080p)(?=.*简体中文字幕)
+
 
